tests/paczka1/small_fuzzy/47360150.err
Error in line 8: zmkL S933 19,8
Error in line 5: 8bLTkca A757 74,7
Error in line 4: gjvI4I4DQo8 S933 25,8
